# pypa-template

./: .buildinfo  .readthedocs.yml  CONTRIBUTING.md  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci-cd.yml
_modules/: index.html
_modules/dataIO/: beep.html  debug.html  dicts.html  files.html  fn_add_subfix.html  functions.html  logger.html  read_pars_from_namelist.html  rebin.html  running_mean.html
_modules/pyGeo3D/: geoShell.html  intersect_plane_line.html  ostruzione.html
_modules/pyProfile/: power_law.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/source/: api.rst.txt  basic_ipynb_toctree.rst.txt  index.rst.txt  tutorials.rst.txt
autoapi/: index.html
autoapi/annotations/: index.html
autoapi/astupidloop/: index.html
autoapi/dataIO/: index.html
autoapi/plotting/: index.html
autoapi/pyGeo3D/: index.html
autoapi/pyProfile/: index.html
autoapi/pySurf/: index.html
autoapi/pyXsurf/: index.html
autoapi/readConfig/: index.html
autoapi/readConfig2/: index.html
autoapi/src/: index.html
autoapi/test/: index.html
autoapi/test_interactive/: index.html
autoapi/test_program_path/: index.html
autoapi/tkmatplotlibembedded/: index.html
docs/: Makefile  requirements.txt
pyXsurf/: CHANGELOG.md  LICENSE  pyproject.toml
source/: api.html  basic_ipynb_toctree.html  index.html  readme_link.html  tutorials.html
src/: __init__.py
tests/: test_pyXsurf.py
(+500 files in other folders)
